14-ingress/app-blue-shared-vol.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 creationTimestamp: null
 labels:
  app: blue-app
 name: blue-app
spec:
 replicas: 1
 selector:
  matchLabels:
   app: blue-app
 strategy: {}
 template:
  metadata:
   creationTimestamp: null
   labels:
    app: blue-app
    type: canary
  spec:
   volumes:
   - name: host-volume
     hostPath:
      path: /home/docker/blue-shared-volume
   containers:
   - image: nginx
     name: nginx
     ports:
     - containerPort: 80
     volumeMounts:
     - mountPath: /usr/share/nginx/html
       name: host-volume
   - image: debian
     name: debian
     volumeMounts:
     - mountPath: /host-vol
       name: host-volume
     command: ["/bin/sh", "-c", "echo Welcome to Blue App! > /host-vol/index.html ; sleep infinity"]
status: {}
