14-ingress/second-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 annotations:
  nginx.ingress.kubernetes.io/service-upstream: "true"
 name: fan-out-ingress
 namespace: default
spec:
 ingressClassName: nginx
 rules:
 - host: local-domain.dev
   http:
    paths:
    - path: /blue
      backend:
       service:
        name: blue-svc
        port:
         number: 80
      pathType: ImplementationSpecific
    - path: /green
      backend:
       service:
        name: green-svc
        port:
         number: 80
      pathType: ImplementationSpecific
